--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unvowel-last",
-  "version": "1.3.10",
+  "version": "1.3.11",
   "description": "Removes the last letter from a string if it is a vowel.",
   "main": "lib/index.js",
   "directories": {
@@ -41,6 +41,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
